--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "framer-motion": "^11.11.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.28.0",
     "viem": "^2.21.45"
   },
   "devDependencies": {
