--- a/package.json
+++ b/package.json
@@ -16,12 +16,23 @@
     "@dynamic-labs/sdk-react-core": "^3.6.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@zerodev/sdk": "^5.3.26",
+    "@ethersproject/providers": "^5.7.2",
+    "@fontsource/ibm-plex-mono": "^5.1.0",
+    "@fontsource/inter": "^5.1.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@uniswap/sdk-core": "^5.9.0",
+    "@uniswap/token-lists": "^1.0.0-beta.34",
+    "@uniswap/widgets": "^2.59.0",
+    "@web3-react/core": "^8.2.3",
     "@zerodev/web3auth": "^4.7.0",
+    "buffer": "^6.0.3",
+    "ethers": "^5.7.2",
     "framer-motion": "^11.11.17",
+    "next-tick": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.28.0",
     "viem": "^2.21.45"
   },
